Update README, Fix markdown overflow  visible?

--- a/src/css/modules/grid-layout.css
+++ b/src/css/modules/grid-layout.css
@@ -18,6 +18,7 @@ main {
 }
 
 .markdown {
+    overflow: hidden;
     position: relative;
 }
 
